# OASIS-TEST

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nginx.conf  nomad.yaml
resources/nomad/: jupyterhub_config.py
resources/nomad/app/v1/routers/: north.py
resources/nomad/config/models/: north.py
