[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[infrastructure]==1.4.2"]

[project.urls]
repository = "https://github.com/rettigl/oasis-test"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
  "nomad-north-jupyter>=0.2.5",
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git",
  "nomad-porous-materials @ git+https://github.com/FAIRmat-NFDI/nomad-porous-materials.git",
  "nomad-aitoolkit @ git+https://github.com/FAIRmat-NFDI/nomad-aitoolkit.git",
  "nomad-simulations>=0.7.0",
  "pynxtools>=0.13.1",
  "pynxtools-mpes>=0.2.8",
  "pynxtools-igor>=0.1.4",
  "fhi-sed-config @ git+https://github.com/OpenCOMPES/fhi_sed_config.git@v1.3.17",
  "nomad-schema-plugin-run>=1.0.5",
  "nomad-schema-plugin-simulation-workflow>=1.0.4",
  "nomad-normalizer-plugin-bandstructure>=1.0.4",
  "nomad-normalizer-plugin-dos>=1.0.5",
  "nomad-normalizer-plugin-soap>=1.0.2",
  "nomad-normalizer-plugin-spectra>=1.0.4",
  "nomad-normalizer-plugin-system>=1.0.5",
  "nomad-normalizer-plugin-simulation-workflow>=1.0.4",
  "eelsdbconverter @ git+https://github.com/nomad-coe/nomad-parser-eelsdb.git@entry-point",
  "nomad-parser-plugins-electronic>=1.0.17",
  "nomad-parser-plugins-atomistic>=1.0.12",
  "nomad-parser-plugins-workflow>=1.1.12",
  "nomad-parser-plugins-database>=1.1.3",
  "nomad-material-processing>=1.0.6",
  "nomad-measurements>=1.0.20",
#  "ikz_pld @ git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git#subdirectory=PVD/PLD/jeremy_ikz/ikz_pld_plugin"
]

jupyter = [
  "jupyter-events",
  "sed-processor>=1.3.0",
  "specsanalyzer>=1.2.0",
]
dev = ["nomad-lab[infrastructure, dev]==1.4.2"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
